# surge-rs_DEV

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
cpp/: bridge.cpp  bridge.h
examples/: everything.rs  midi.rs
src/: lib.rs  lib.rs.bkp  main.rs  parameter.rs
src/glue/: hcode.rs  hell_ffi.rs  mod.rs  synthesizer.rs
