[package]
name = "surge-rs"
version = "0.1.0"
authors = ["NV4 <cattobyte@kyararanbii.xyz>"]
edition = "2024"
description = "(Official) Rust bindings for the Surge XT synthesizer."
license = "GPL-3.0-or-later"
license-file = "LICENCE"							# *that's* how you write it!
keywords = ["audio", "synthesis", "api", "ffi"]
categories = ["multimedia::audio", "api-bindings", "external-ffi-bindings"]
exclude = ["/sbmod"]

[dependencies]
textplots = "0.8.7"
cpal = "0.17.3"
ringbuf = "0.4.8"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.57"
serde_json = "1.0.149"
shell-words = "1.1.1"
cc = "1.2.57"
